[project]
name = "newsletter-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=7.0.0",
    "fastapi>=0.115.0",
    "google-genai>=2.10.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.50",
    "openai>=2.43.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "uvicorn>=0.32.0",
]
